# rp2040_spectro

./: CMakeLists.txt  LICENSE  README.md  spectro.c
